k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java_app_deployment
spec:
  selector:
    matchLabels:
      app: java_app
  template:
    metadata:
      labels:
        app: java_app
    spec:
      containers:
      - name: java_app
        image: 192.168.52.132:5000/devops_project:${BUILD_NUMBER}
        resources:
          limits: {}
        ports:
        - containerPort: 8080
