k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
spec:
  type: ClusterIP
  selector:
    app: java-app
  ports:
  - port: 8080
    targetPort: 8080
